k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-app-deployment
  labels:
    app: netflix-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix-app
  template:
    metadata:
      labels:
        app: netflix-app
    spec:
      containers:
      - name: netflix-app
        image: manoharmattepu/netflix-app:1   # <-- Replace with your Jenkins IMAGE_TAG if needed
        ports:
        - containerPort: 3000
